<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BlueChat</string>
    <string name="name">name</string>
    <string name="str_label_btn_send">Send</string>
    <string name="str_menu_search_devices">Search Devices</string>
    <string name="str_menu_bluetooth_on">Switch on Bluetooth</string>
    <string name="str_menu_about">About</string>

    <string name="str_paired_devices">Paired Devices</string>
    <string name="str_available_devices">Available Devices</string>
    <string name="str_menu_scan_devices">Scan Devices</string>
    <string name="start_server">Start Server</string>
    <string name="str_label_btn_send_image">Send Image</string>


    <!-- preferences -->
    <string name="pref_menu_label">Settings</string>
    <!--font size list preference-->
    <string name="pref_font_size_label">Font size</string>
    <string name="pref_font_size_key" translatable="false">fontSize</string>
    <!--    font labels-->
    <string name="pref_font_size_label_small">Small</string>
    <string name="pref_font_size_label_medium">Medium</string>
    <string name="pref_font_size_label_large">Large</string>
    <!--    font values-->
    <string name="pref_font_size_small_value" translatable="false">small</string>
    <string name="pref_font_size_medium_value" translatable="false">medium</string>
    <string name="pref_font_size_large_value" translatable="false">large</string>
    <!--theme color list preference-->
    <string name="pref_theme_color_label">Theme color</string>
    <string name="pref_theme_color_key" translatable="false">themeColor</string>
    <!--    theme labels-->
    <string name="pref_theme_color_label_vibrant_blue">Vibrant blue</string>
    <string name="pref_theme_color_label_dark_blue">Dark blue</string>
    <string name="pref_theme_color_label_grey">Grey</string>
    <string name="pref_theme_color_label_purple">Purple</string>
    <!--    theme values-->
    <string name="pref_theme_color_vibrant_blue_value">vibrantBlue</string>
    <string name="pref_theme_color_dark_blue_value">darkBlue</string>
    <string name="pref_theme_color_grey_value">grey</string>
    <string name="pref_theme_color_purple_value">purple</string>
</resources>